fix missing donation button on Iphone

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -329,7 +329,7 @@ ol {
     display: none;
   }
 }
-@media only screen and (min-width: 390px) and (max-width: 450px) {
+@media only screen and (min-width: 301px) and (max-width: 450px) {
   .header-area .crose-btn {
     display: inline-block;
     min-width: 80px;
@@ -345,7 +345,7 @@ ol {
   }
 }
 
-@media only screen and (max-width: 389px) {
+@media only screen and (max-width: 300px) {
   .header-area .crose-btn {
     display: none;
   }
